# Hyde-Agent

./: HYDE_AI_CAPABILITIES.md  HYDE_COMMANDS.md  HYDE_COMMANDS_V2.md  HYDE_INTENTS_V2.md  HYDE_ROUTING_RULES.md  README.md  package-lock.json  package.json  test_intents.py  v1.0_capabilities.md
src-tauri/: Cargo.toml  listen_once.py  speech.ps1  tauri.conf.json  test_listen.py
src-tauri/hyde_engine/: config.py  main.py
src-tauri/hyde_engine/actions/: executor.py
src-tauri/hyde_engine/audio/: stt.py  tts.py  wake_word.py
src-tauri/hyde_engine/nlu/: context_memory.py  intent_parser.py
src-tauri/icons/: icon.icns
src-tauri/src/: custom_commands.rs  ipc.rs  lib.rs  logger.rs  parser.rs  registry.rs  types.rs  voice.rs  voice_setup.rs
src-tauri/src/core/: db.rs  mod.rs  router.rs  scheduler.rs
src-tauri/src/executor/: ai.rs  app.rs  browser.rs  clipboard.rs  info.rs  media.rs  mod.rs  system.rs  timer.rs
src/overlay/: index.html  overlay.css  overlay.js
src/settings/: settings.css  settings.html  settings.js
voice/: index.html
